--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>========AWS OpsWorks Sample App New 2022=========</title>
+  <title>AWS OpsWorks Sample App New 2022</title>
   <style type="text/css" media="screen">
   body {
     background-image: url("images/white_wall_hash.png");
@@ -182,10 +182,9 @@
     <div class="container">
      <div class="hero-unit">
       <div class="robot">
-        <h1>=======Congratulations=========</h1>
+        <h1>Welcome to OpsWorks session</h1>
         <h2>
-          ===========You just deployed your first app with<br/>
-          AWS OpsWorks=========
+         First app with AWS OpsWorks
         </h2>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://aws.amazon.com/opsworks/" data-text="Look mum. I just successfully deployed with AWS OpsWorks!" data-size="large" data-related="AWSOpsWorks" data-count="none">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
